# DevServer

./: README.md  devserver_installer.sh
linux/CMAKE/: build.sh
linux/CMAKE/src/: CMakeLists.txt  config.hxx  filecache.dat~  filesystem.hxx  load.hxx  main.cxx  preprocessor.hxx  server.hxx  server_actions.hxx  termserv.hxx  userprgm.hxx
linux/CMAKE/src/res/: input.html  javascript.js
linux/DevServer/: CMakeLists.txt  config.hxx  devlib.h  devlib.hxx  filecache.dat~  filesystem.hxx  globals.hxx  input.html  main.cxx  preprocessor.hxx  server.hxx  userprgm.hxx
linux/DevServer/dlib/all/: source.cpp
linux/build-DevServer-Desktop-Default/: CMakeCache.txt  DevServer.cbp  Makefile  cmake_install.cmake  filecache.dat~  inject.htx  input.html  monitor.htx
linux/build-DevServer-Desktop-Default/res/: input.html  jsapi.js
src/: config.hxx  globals.hxx  inject.htx  load.hxx  main.cxx  monitor.htx  server.hxx  userprgm.hxx
src/res/: input.html  monitor.htx  style.css
windows/vs2013/DevServer_win/: DevServer_win.sln
windows/vs2013/DevServer_win/DevServer_win/: DevServer_win.vcxproj  DevServer_win.vcxproj.filters  config.hxx  filesystem.hxx  globals.hxx  main.cxx  preprocessor.hxx  server.hxx
windows/vs2013/DevServer_win/DevServer_win/dlib/all/: source.cpp
windows/vs2013/DevServer_win/DevServer_win/res/: input.html
